[package]
name = "perplex"
version = "0.4.0"
authors = ["Fabian Schuiki <fabian@schuiki.ch>"]
description = "A grammar analyzer and LR(k)/GLR parser generator."
repository = "https://github.com/fabianschuiki/perplex"
documentation = "https://docs.rs/perplex"
license-file = "LICENSE"

[[bin]]
name = "perplex"
path = "src/tool.rs"

[workspace]

[dependencies]
clap = "2.31.2"
bit-set = "0.5.0"
memmap = "0.6.2"
indexmap = "1.0.1"
log = "0.4"
stderrlog = "0.4.1"
perplex-runtime = { path = "src/runtime", version = "0.1.0" }
